feat:GetUsers and Paginator
